ec2/ec2-with-sg-and-eip-ubuntu-linux.template
{
  "AWSTemplateFormatVersion" : "2010-09-09",

  "Description" : "This template creates an Ubuntu EC2 instance with a security group and Elastic IP. Includes UVA Grounds CIDR blocks for SSH access.",

  "Parameters" : {
    "KeyName": {
      "Description" : "Name of an existing EC2 KeyPair to enable SSH access to the instance",
      "Type": "AWS::EC2::KeyPair::KeyName",
      "ConstraintDescription" : "Must be the name of an existing EC2 KeyPair."
    },

    "InstanceType" : {
      "Description" : "EC2 instance type",
      "Type" : "String",
      "Default" : "t2.small",
      "AllowedValues" : [ "t2.nano", "t2.micro", "t2.small", "t2.medium", "t2.large", "m3.medium", "m3.large", "m3.xlarge", "m3.2xlarge", "m4.large", "m4.xlarge", "m4.2xlarge", "c3.large", "c3.xlarge", "c3.2xlarge", "c4.large", "c4.xlarge", "c4.2xlarge", "r3.large", "r3.xlarge", "r3.2xlarge", "d2.xlarge", "d2.2xlarge", "d2.4xlarge"],
      "ConstraintDescription" : "Must be a valid EC2 instance type."
    },

    "SSHLocation" : {
      "Description" : "The IP address range that can be used to SSH to the EC2 instances. Do not set this to 0.0.0.0/0. Instead, look up your current IP and add /32 to it.",
      "Type": "String",
      "MinLength": "9",
      "MaxLength": "18",
      "Default": "254.254.254.254/32",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "Must be a valid IP CIDR range of the form x.x.x.x/x"
   }
  },

  "Resources" : {

    "MyEIP" : {
      "Type" : "AWS::EC2::EIP",
      "Properties" : {
         "InstanceId" : { "Ref" : "EC2Instance" }
      }
    },

    "EC2Instance" : {
      "Type" : "AWS::EC2::Instance",
      "Properties" : {
        "InstanceType" : { "Ref" : "InstanceType" },
        "SecurityGroups" : [ { "Ref" : "InstanceSecurityGroup" } ],
        "KeyName" : { "Ref" : "KeyName" },
        "ImageId" : "ami-cd0f5cb6",
        "Tags" : [
            {"Key" : "Project", "Value" : "DsiCapstone"},
            {"Key" : "Name", "Value" : "DSI-Instance"}
        ],
        "UserData": {"Fn::Base64": {"Fn::Join" : ["", [
            "#!/bin/bash -e\n",
            "export DEBIAN_FRONTEND=noninteractive\n",
            "apt-get update && apt-get -o Dpkg::Options::=\"--force-confold\" upgrade -q -y --force-yes && apt-get -o Dpkg::Options::=\"--force-confold\" dist-upgrade -q -y --force-yes\n"
        ]]}}
      }
    },

    "InstanceSecurityGroup" : {
      "Type" : "AWS::EC2::SecurityGroup",
      "Properties" : {
        "GroupDescription" : "Enable SSH access via port 22",
        "Tags" : [ {"Key" : "Project", "Value" : "DsiCapstone"}],
        "SecurityGroupIngress" : [ {
          "Description" : "Custom CIDR set at creation",
          "IpProtocol" : "tcp",
          "FromPort" : "22",
          "ToPort" : "22",
          "CidrIp" : { "Ref" : "SSHLocation"}
        } ]
      }
    },

    "UVAIngress1": {
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
            "GroupName": {
                "Ref": "InstanceSecurityGroup"
            },
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp" : "199.111.0.0/16",
            "Description" : "UVA Campus"
        }
     },

    "UVAIngress2": {
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
            "GroupName": {
                "Ref": "InstanceSecurityGroup"
            },
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp" : "128.143.0.0/16",
            "Description" : "UVA Campus"
        }
     },

    "UVAIngress3": {
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
            "GroupName": {
                "Ref": "InstanceSecurityGroup"
            },
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp" : "137.54.0.0/16",
            "Description" : "UVA Campus"
        }
     }

  },

  "Outputs" : {
    "InstanceId" : {
      "Description" : "InstanceId of the newly created EC2 instance",
      "Value" : { "Ref" : "EC2Instance" }
    },
    "AZ" : {
      "Description" : "Availability Zone of the newly created EC2 instance",
      "Value" : { "Fn::GetAtt" : [ "EC2Instance", "AvailabilityZone" ] }
    },
    "PublicDNS" : {
      "Description" : "Public DNSName of the newly created EC2 instance",
      "Value" : { "Fn::GetAtt" : [ "EC2Instance", "PublicDnsName" ] }
    },
    "PublicIP" : {
      "Description" : "Public IP address of the newly created EC2 instance",
      "Value" : { "Fn::GetAtt" : [ "EC2Instance", "PublicIp" ] }
    }
  }
}
